--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-spring": "^9.7.2",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
+    "styled-components": "^6.0.8",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
     "web-vitals": "^2.1.4"
