--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "formik": "^2.2.9",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -21,7 +21,8 @@
     "styled-components": "^6.0.8",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
